Fix bad check that would bug the offline menu letting you steal items if no offline players were found